--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
         "@types/react-dom": "^18.0.6",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "typescript": "^4.7.4"
+        "typescript": "^4.7.4",
+        "use-timer": "^2.0.1"
     },
     "scripts": {
         "start": "vite",
