--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
         "react-dom": "^18.2.0",
         "typescript": "^4.7.4",
         "use-sound": "^4.0.1",
-        "use-timer": "^2.0.1"
+        "use-timer": "^2.0.1",
+        "i18next": "^21.8.14",
+        "react-i18next": "^11.18.3"
     },
     "scripts": {
         "start": "vite",
